examples/test/testpolicy14525.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14525
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key37: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value37
          key36: value8
          key46: value22
      podSelector:
        matchLabels:
          key46: value14
          key18: value19
